--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <body>
+      <a href="C:\\Documents and Settings\Administrator\\桌面\\仪器管理\\1.zip"> xiazai</a>
+    </body>
     <section class="page-header">
       <h1 class="project-name">Goldenrtiger.GitHub.io</h1>
       <h2 class="project-tagline"></h2>
