--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <body>
-      <a href="C:\\Documents and Settings\Administrator\\桌面\\仪器管理\\1.zip"> xiazai</a>
+      <a href="1.txt"> xiazai</a>
     </body>
     <section class="page-header">
       <h1 class="project-name">Goldenrtiger.GitHub.io</h1>
